[tool.poetry]
name = "uno"
version = "0.1.0"
description = ""
authors = ["Simon Weiß <weiss.simon@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
hypothesis = "^6.83.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
